--- a/frontend/src/pages/cadastro/styles.css
+++ b/frontend/src/pages/cadastro/styles.css
@@ -7,6 +7,9 @@
   justify-content: space-between;
   align-items: center;
   padding: 0px 100px 0 100px;
+  width: 100%;
+  margin-top: 115px;
+  margin-left: -100px
 }
 a{
   text-decoration: none;
@@ -90,6 +93,7 @@ color: #FFFFFF;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background-blend-mode: multiply;
 
 }
 
@@ -236,4 +240,6 @@ input:focus{
   padding-top: 10px;
 }
 
-
+.imgIph{
+  margin-top: 279px;
+}
