23/05/2021 Julio Jorge, correção da tela de login

--- a/frontend/src/pages/cadastro/styles.css
+++ b/frontend/src/pages/cadastro/styles.css
@@ -1,6 +1,11 @@
 *{
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Noto Sans', sans-serif
 }
+
+.HomePage{
+  width: 100%;
+}
+
 .header {
   display: flex;
   flex-direction: row;
