--- a/frontend/src/pages/cadastro1/styles1.css
+++ b/frontend/src/pages/cadastro1/styles1.css
@@ -50,6 +50,8 @@
     border: none;
     outline: none;
     background-color: #C4C4C4;
+    margin-bottom: 10px;
+    margin-top: 20px;
   }
   
   
